--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <header class="header container container-fluid header-mobi">
         <ul class="header-con row">
-            <li class="col-xs-4"><span class="menu">=</span></li>
+            <li class="col-xs-4"><span class="menu iconfont icon-menu"></span></li>
             <li class="col-xs-4 logo"></li>
             <li class="col-xs-4 cart"></li>
         </ul>
@@ -248,9 +248,9 @@
 
 
         <div class="copyright inner">
-            更多选购方式：前往 <a href="javascript:void(0)">Apple Store 零售店</a> ，<br>致电 400-666-8800 或查找在你附近的<a href="javascript:void(0)">授权经销商</a>。<br>
+            更多选购方式：前往 <a href="javascript:void(0)">Apple Store 零售店</a> ，致电 400-666-8800 或查找在你附近的<a href="javascript:void(0)">授权经销商</a>。<br>
             <hr>
-            Copyright © 2015 Apple Inc. 保留所有权利。<br>隐私政策 使用条款 销售政策 网站地图<br>
+            Copyright © 2015 Apple Inc. 保留所有权利。隐私政策 使用条款 销售政策 网站地图<br>
             京公安网安备 11010500896 京ICP备10214630
         </div>
     </footer>
